Tue Feb 20 12:16:12 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkiconfactory.c (gtk_icon_set_new_from_pixbuf): New
	function to create an icon set from a pixbuf.

2001-02-20  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkcellrenderertext.[ch]:
	Add a "markup" property.

	* gtk/treestoretest.c:
	Use the markup property, remove some leftover stuff from
	GtkTreeModelMapping.

2001-02-20  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtklabel.c (gtk_label_set_selectable):
	Queue a redraw if the selectable setting was changed.

2001-02-20  Alexander Larsson  <alexl@redhat.com>

	* gdk/linux-fb/gdkgc-fb.c (gdk_gc_copy):
	Actually copy the whole gc, not just the public parts.
	
	* gdk/linux-fb/gdkwindow-fb.c (gdk_window_new):
	GDK_WINDOW_TEMP are not toplevel. Fixes selectable
	labels.

2001-02-19  Havoc Pennington  <hp@pobox.com>

	* gdk/gdkwindow.c: docs

	* gdk/gdkrgb.c: docs

	* gdk/gdkregion-generic.c: docs

	* gdk/gdkgc.c (gdk_gc_set_values): docs

	* gdk/gdkdraw.c: docs

	* gdk/gdkdrawable.h: deprecate drawable get/set data

Mon Feb 19 20:37:35 2001  Jonathan Blandford  <jrb@redhat.com>

	* demos/gtk-demo/dialog.c: Add simple new demo.

2001-02-19  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextbuffer.h (struct _GtkTextBufferClass): add
	insert_child_anchor signal, bug #50245

	* gtk/gtktextbtree.c (_gtk_text_btree_insert_child_anchor): change
	from create_child_anchor, so the anchor is passed in

	* gtk/gtktextchild.c (gtk_text_child_anchor_new): new function
	(_gtk_widget_segment_new): have the child anchor object passed in, 
	instead of creating it.

	* gtk/gtktextbuffer.c (gtk_text_buffer_modified): rename
	to gtk_text_buffer_get_modified

2001-02-19  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktreemodel.c (gtk_tree_model_get_valist): hmm, someone
	changed GLib without fixing GTK

	* gtk/gtkrange.h: Rename all the stupid implementation detail 
	functions to have an underscore in front. Most of them should 